# eye-movement-net

./: .gitignore  README.md  analyze_grid_search.py  analyze_grid_search2.py  convert_images.py  data.py  em_utils.py  eye-movement-net.code-workspace  fixation_utils.py  generate_bm_fixation_data.py  generate_bm_fixation_videos.py  generate_em_videos.py  generate_pink_noise_images.py  generate_pink_noise_movies.py  generate_pink_noise_videos.py  main.py  model.py  ocko_model.py  ocko_train.py  plot_kernels.py  pyproject.toml  requirements.txt  sandbox.ipynb  test.py  test_h5load.py  test_pink_noise.py  test_whitening.ipynb  train.py  train_grid.py  train_grid.sh  train_main.py  train_static.py  utils.py  visualize_data.py  whiten_images.py
datasets/: __init__.py  video_dataset.py
