[project]
name = "eye-movement-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diplib>=3.5.2",
    "fire>=0.7.0",
    "matplotlib>=3.10.1",
    "moviepy==2.0.0",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torch-tb-profiler>=0.4.3",
    "tqdm>=4.67.1",
]
